trying to fix the side scroll on mobile
trying to fix the side scroll on mobile so hamburger menu shows

--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -14,3 +14,7 @@ a {
     color: darken($primary, 15%);
   }
 }
+
+html, body {
+  overflow-x: hidden !important;
+}
